--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -21,6 +22,10 @@ body {
 
 h1 {
     margin: 32px;
+}
+
+.disable-scrolling{
+    overflow-y: hidden;
 }
 
 .imgbox {
